2019년에 읽은 리디북스, 리디셀렉트 책들

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -63,7 +63,7 @@ layout: default
     {% if page.book == true %}
         {% if page.ridibooks == true %}
             {% for book-list in site.data[page.data-name] %}   
-                <a href="https://ridibooks.com/v2/Detail?id={{ book-list.bookid }}" target="_blank" class="book-link">
+                <a href="https://ridibooks.com/books/{{ book-list.bookid }}" target="_blank" class="book-link">
                     <img class="book-cover transition" src="https://misc.ridibooks.com/cover/{{ book-list.bookid }}/xxlarge"/>
                 </a>   
             {% endfor %}
