--- a/_includes/head.html
+++ b/_includes/head.html
@@ -51,4 +51,16 @@
       enable_page_level_ads: true
     });
   </script>
+  <!-- Beusable for testing -->
+ <script type="text/javascript">
+  (function(w, d, a){
+      w.__beusablerumclient__ = {
+          load : function(src){
+              var b = d.createElement("script");
+              b.src = src; b.async=true; b.type = "text/javascript";
+              d.getElementsByTagName("head")[0].appendChild(b);
+          }
+      };w.__beusablerumclient__.load(a);
+  })(window, document, "//rum.beusable.net/script/b200521e174556u166/a55256893d");
+  </script>
 </head>
