--- a/_includes/head.html
+++ b/_includes/head.html
@@ -31,6 +31,14 @@
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700" rel="stylesheet">
   <link rel="shortcut icon" href="http://www.jihyeleee.com/img/favicon.ico">
     
+    <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-MSC9VLZ');</script>
+<!-- End Google Tag Manager -->
+  
   <!-- GA -->
    <script async="" src="https://www.google-analytics.com/analytics.js"></script>
     
@@ -51,16 +59,5 @@
       enable_page_level_ads: true
     });
   </script>
-  <!-- Beusable for testing -->
- <script type="text/javascript">
-  (function(w, d, a){
-      w.__beusablerumclient__ = {
-          load : function(src){
-              var b = d.createElement("script");
-              b.src = src; b.async=true; b.type = "text/javascript";
-              d.getElementsByTagName("head")[0].appendChild(b);
-          }
-      };w.__beusablerumclient__.load(a);
-  })(window, document, "//rum.beusable.net/script/b200521e174556u166/a55256893d");
-  </script>
+  
 </head>
