--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,4 +46,8 @@
       {% include footer.html %}
    
   </body>
+  <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-MSC9VLZ"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
 </html>
