--- a/_includes/project-list.html
+++ b/_includes/project-list.html
@@ -1,5 +1,5 @@
 <li class="workplace transition">
-    {% for third in site.data.experience.third-place %}
+    {% for third in site.data.information.third-place %}
     <p class="workplace-name">
         {{ third.name }}
     </p>
@@ -30,7 +30,7 @@
     {% endfor %}
 </li>
 
-<li class="workplace transition">
+<!-- <li class="workplace transition">
     {% for first in site.data.experience.first-place %}
     <p class="workplace-name">
         {{ first.name }}
@@ -44,4 +44,4 @@
         </p>
     </div>
     {% endfor %}
-</li>
+</li> -->
