--- a/_includes/resume.html
+++ b/_includes/resume.html
@@ -5,7 +5,7 @@
             <span class="label-emoji">
                 &#x1F64B;
             </span>    
-            &nbsp; I've worked for
+            &nbsp; My Simple Information
         </p>
     </div>
     <ul>
@@ -24,7 +24,7 @@
 </section>
 
 
-<section class="skill">
+<!-- <section class="skill">
     <div class="resume-info">
         <p class="second-label">
             <span class="label-emoji">
@@ -40,5 +40,5 @@
             </li>
         {% endfor %}
     </ul>
-</section>
+</section> -->
 </div>    
