--- a/_includes/project-list.html
+++ b/_includes/project-list.html
@@ -15,7 +15,7 @@
 </li>
 
 <li class="workplace transition">
-    {% for second in site.data.experience.second-place %}
+    {% for second in site.data.information.second-place %}
     <p class="workplace-name">
         {{ second.name }}
     </p>
