--- a/_includes/project-list.html
+++ b/_includes/project-list.html
@@ -7,9 +7,9 @@
         <p>
             {{ third.role }}
         </p>
-        <p class="work-sub-info">
+        <!-- <p class="work-sub-info">
             {{ third.date }}
-        </p>
+        </p> -->
     </div>
     {% endfor %}
 </li>
@@ -23,9 +23,9 @@
         <p>
             {{ second.role }}
         </p>
-        <p class="work-sub-info">
+        <!-- <p class="work-sub-info">
             {{ second.date }}
-        </p>
+        </p> -->
     </div>
     {% endfor %}
 </li>
