--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer>
-    <address class="footer_wrap">
+    <address class="footer_wrap" style="text-align: center;">
         <div class="information">
             <div class="myname">
                 Hongil Son
@@ -7,7 +7,7 @@
             <a href="mailto:sonhl0723@naver.com" class="email">
                 sonhl0723@naver.com
             </a>
-            <div class="accounts">
+            <div class="accounts" style="margin-top: -1rem;">
                 <!-- <a href="http://dribbble.com/iamleejihye" target="_blank" class="transition">
                     <svg viewBox="0 0 48.6 48.6">
                     <path d="M24.3,0C10.9,0,0,10.9,0,24.3s10.9,24.3,24.3,24.3s24.3-10.9,24.3-24.3C48.7,10.9,37.8,0,24.3,0z M24.3,4.2
