--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,7 +7,7 @@
             <a href="mailto:sonhl0723@naver.com" class="email">
                 sonhl0723@naver.com
             </a>
-            <div class="accounts" style="margin-top: -1rem;">
+            <div class="accounts">
                 <!-- <a href="http://dribbble.com/iamleejihye" target="_blank" class="transition">
                     <svg viewBox="0 0 48.6 48.6">
                     <path d="M24.3,0C10.9,0,0,10.9,0,24.3s10.9,24.3,24.3,24.3s24.3-10.9,24.3-24.3C48.7,10.9,37.8,0,24.3,0z M24.3,4.2
@@ -19,7 +19,7 @@
                     c4.7-2,8.5-4.8,11.3-8.3c2.7,3.2,4.5,7.3,4.7,11.8C39.2,22.4,34.4,22.3,30,23.1z"></path>
                     </svg>
                 </a> -->
-                <a href="http://github.com/iamleejihye" target="_blank" class="transition">
+                <a href="http://github.com/sonhl0723" target="_blank" class="transition">
                     <svg viewBox="0 0 32.6 31.8">
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M16.3,0C7.3,0,0,7.3,0,16.3c0,7.2,4.7,13.3,11.1,15.5
                     c0.8,0.1,1.1-0.4,1.1-0.8c0-0.4,0-1.4,0-2.8c-4.5,1-5.5-2.2-5.5-2.2c-0.7-1.9-1.8-2.4-1.8-2.4c-1.5-1,0.1-1,0.1-1
