--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -23,6 +23,7 @@ $ridi-blue: #1f8ce6;
 $ridi-skyblue: #66baff;
 $purple: #8565fc;
 $light-purple: #997EFA;
+$green: #045762;
 
 // media
 $break-medium: 900px;
