--- a/_sass/_catalogue.scss
+++ b/_sass/_catalogue.scss
@@ -12,7 +12,7 @@
   }
 
     &-type {
-        color: $purple;
+        color: $green;
         font-size: 18px;
         font-family: $source;
         font-weight: 600;
