--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -35,10 +35,10 @@ layout: default
             <span class="info-title">Team</span>
             <p class="info-medium">{{ page.team }}</p>
         </div>
-        <div>
+        <!-- <div>
             <span class="info-title">Platforms</span>
             <p class="info-medium">{{ page.platforms }}</p>
-        </div>    
+        </div>     -->
         <div>
             <span class="info-title">Date</span>
             <p class="info-medium">{{ page.date }}</p>
