--- a/_includes/head.html
+++ b/_includes/head.html
@@ -29,7 +29,7 @@
   <!-- CSS -->
   <link rel="stylesheet" href="{{ site.baseurl }}/styles.css">
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700" rel="stylesheet">
-  <link rel="shortcut icon" href="http://www.sonhl0723.github.io/img/favicon.ico">
+  <link rel="shortcut icon" href="img/favicon.ico">
     
     <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
