--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -16,11 +16,13 @@ pre {
 }
 
 pre code {
-  background-color: transparent;
-  color: inherit;
+  background-color: black;
+  color: #ffffff;
   font-size: 100%;
   padding: 0;
   font-size: 16px;
+  display: block;
+  text-indent: 1%;
 }
 
 .highlight {
